手动修改一些细节代码